additional mobile layout bug fixes

--- a/src/css/_horizontal-list.scss
+++ b/src/css/_horizontal-list.scss
@@ -2,6 +2,7 @@
   list-style: none;
   display: flex;
   justify-content: space-between;
+  flex-wrap: wrap;
 }
 .cagov-horizontal-list li {
   margin: 0;
